--- a/v1.html
+++ b/v1.html
@@ -22,6 +22,7 @@
 		<h3>car-HUD</h3>
 		<div><span>Speed: </span><span id="speed">Untouched DOM Element</span><span> MPH</span></div>
 		<div><span>Odometer: </span><span id="odo">Untouched DOM Element</span><span> Miles</span></div>
+		<div><span>Error: </span><span id="error">Untouched DOM Element</span></div>
 	</body>
 	
 	<script>
