--- a/v1.html
+++ b/v1.html
@@ -16,10 +16,14 @@
 		   float:left;
 		   width: 12%;
 		}
+		background-color: black;
+		color: #fff;
+		font-size: 300%;
+		font-family: Monaco;
 	</style>
 	
 	<body>
-		<h3>car-HUD</h3>
+		<h3>CarOS</h3>
 		<div><span>Speed: </span><span id="speed">Untouched DOM Element</span><span> MPH</span></div>
 		<div><span>Odometer: </span><span id="odo">Untouched DOM Element</span><span> Miles</span></div>
 		<div><span>Error: </span><span id="error">Untouched DOM Element</span></div>
